Fix name in composer file

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         }
     },
     "extra": {
-        "name": "File Content",
+        "name": "Craft Static",
         "handle": "static",
         "developer": "TJ Draper",
         "developerUrl": "https://buzzingpixel.com",
