--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "buzzingpixel/craft-static",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "Static file caching for Craft 3",
     "type": "craft-plugin",
     "keywords": [
@@ -25,8 +25,7 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "craftcms/cms": "^3.0.0-beta.29",
-        "roave/security-advisories": "dev-master"
+        "craftcms/cms": "^3.0.0-beta.29"
     },
     "autoload": {
         "psr-4": {
