Add PHPStorm Project Config

--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,40 @@
 #------------------------------------
-    # Project
+# Project
 #------------------------------------
 
-#... custom project exclusions
-
-
-
-
-
-#------------------------------------
-    # Tools
-#------------------------------------
-
-localStorage/*
-!localStorage/dbBackups
-localStorage/dbBackups/*
-bower_components/
-node_modules/
-out/
-.bundle
-.idea/
-.komodotools
-.project
-.settings/
-.tern-project
-.tmproj
-*.esproj
-*.komodoproject
-*.sublime-*
-browserstack.js
-codekit-config.json
-mixture.json
-prepros.json
+# ...custom project excludes
 
 
 
 
 
 #------------------------------------
-    # System
+# Tools
+#------------------------------------
+
+.php_cs.cache
+.phpunit.result.cache
+/.env
+/*-workspace
+/node_modules
+/*.sublime-*
+/vendor/*
+
+# As recommended by JetBrains for committing project-level configuration
+# https://intellij-support.jetbrains.com/hc/en-us/articles/206544839-How-to-manage-projects-under-Version-Control-Systems
+
+/.idea/workspace.xml
+/.idea/tasks.xml
+/.idea/usage.statistics.xml
+/.idea/dictionaries
+/.idea/shelf*
+
+
+
+
+
+#------------------------------------
+# System
 #------------------------------------
 
 .cache
@@ -54,16 +50,13 @@ prepros.json
 *.vi
 error_log
 Thumbs.db
-Homestead.yaml
-vendor/*
-*.vagrant
 
 
 
 
 
 #------------------------------------
-    # Gitkeep
+# Gitkeep
 #------------------------------------
 
 !.gitkeep
