--- a/serverConfig/nginx/site.test.conf
+++ b/serverConfig/nginx/site.test.conf
@@ -6,7 +6,7 @@ server {
 
     # Site config
     server_name craft-static.test;
-    root /app/public;
+    root /app/testenvironment/public;
 
     # Indexes
     index index.php index.html index.htm;
