Simplify testing environment nginx config

--- a/serverConfig/nginx/site.test.conf
+++ b/serverConfig/nginx/site.test.conf
@@ -49,11 +49,6 @@ server {
         proxy_read_timeout 300;
     }
 
-    # Deny access to dotfiles
-    location ~ /\. {
-        deny all;
-    }
-
 
 
 
@@ -65,15 +60,7 @@ server {
     # Allow large file uploads
     client_max_body_size 500m;
 
-    # Set cache path
-    set $cachePath $document_root/cache$request_uri/index.html;
-    set $cacheServe /cache$request_uri/index.html;
-    if ($request_uri = /) {
-        set $cachePath $document_root/cache/index.html;
-        set $cacheServe /cache/index.html;
-    }
-
-    # Everywhere except Forge's Lets Encrypt verification
+    # Everywhere execpt LetsEncrypt stuff
     location ~ ^((?!.well-known\/acme-challenge\/).)*$ {
         # We don't need the rest of these rules if the file or directory exists
         if (-f $request_filename) {
@@ -83,28 +70,7 @@ server {
             break;
         }
 
-        # Remove multiple slashes
-        if ($request_uri ~ "^[^?]*?//") {
-            rewrite "^" $scheme://$host:$server_port permanent;
-        }
-
-        # Remove index.php from URL
-        rewrite ^(/index\.php)(.*) $2 permanent;
-
-        # Remove trailing slashes
-        rewrite ^/(.*)/$ $scheme://$host:$server_port/$1 permanent;
-
         # Serve through index.php
         try_files $uri $uri/ /index.php?$query_string;
-    }
-
-    # Redirect /admin to /cms
-    location = /admin {
-        return 302 $scheme://$host:$server_port/cms;
-    }
-
-    # Remove index.php from root URI
-    if ($request_uri ~* "^/index\.php$") {
-        return 301 /;
     }
 }
